Fix wrapping of build version column

--- a/gogdb/static/css/product_info.css
+++ b/gogdb/static/css/product_info.css
@@ -105,6 +105,10 @@
   min-width: 200px;
 }
 
+.build-version {
+  line-break: anywhere;
+}
+
 #tabs-container {
   display: flex;
   text-align: center;
